part2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> expression
Rule 3     statement -> statement expression
Rule 4     expression -> phrase CR
Rule 5     expression -> H1 phrase CR
Rule 6     expression -> H2 phrase CR
Rule 7     expression -> H3 phrase CR
Rule 8     expression -> HR CR
Rule 9     expression -> H CR
Rule 10    expression -> hr CR
Rule 11    expression -> UL phrase CR
Rule 12    expression -> ul
Rule 13    expression -> ol
Rule 14    phrase -> factor
Rule 15    phrase -> phrase factor
Rule 16    phrase -> phrase SYMBOL
Rule 17    phrase -> phrase phrase
Rule 18    phrase -> strong_fact STRONG
Rule 19    phrase -> em_fact EM
Rule 20    phrase -> code_fact CODE
Rule 21    phrase -> anglebrac_fact RANGLEBRAC
Rule 22    phrase -> name brac_fact RBRAC
Rule 23    phrase -> codeblock_fact CODEBLOCK
Rule 24    strong_fact -> strong_fact factor
Rule 25    strong_fact -> STRONG factor
Rule 26    strong_fact -> strong_fact SYMBOL
Rule 27    em_fact -> em_fact factor
Rule 28    em_fact -> EM factor
Rule 29    em_fact -> em_fact SYMBOL
Rule 30    hr -> EM EM
Rule 31    hr -> hr EM
Rule 32    code_fact -> code_fact factor
Rule 33    code_fact -> CODE factor
Rule 34    code_fact -> code_fact SYMBOL
Rule 35    anglebrac_fact -> anglebrac_fact factor
Rule 36    anglebrac_fact -> LANGLEBRAC factor
Rule 37    anglebrac_fact -> anglebrac_fact SYMBOL
Rule 38    name_fact -> name_fact factor
Rule 39    name_fact -> LBOXBRAC factor
Rule 40    name -> name_fact RBOXBRAC
Rule 41    brac_fact -> brac_fact factor
Rule 42    brac_fact -> LBRAC factor
Rule 43    brac_fact -> brac_fact SYMBOL
Rule 44    ul_fact -> ul_fact factor
Rule 45    ul_fact -> UL factor
Rule 46    ul_fact -> ul_fact SYMBOL
Rule 47    ulli -> em_fact CR
Rule 48    ulli -> ul_fact CR
Rule 49    ul -> ul ulli
Rule 50    ul -> ulli
Rule 51    ol_fact -> ol_fact factor
Rule 52    ol_fact -> OL factor
Rule 53    ol_fact -> ol_fact SYMBOL
Rule 54    olli -> ol_fact CR
Rule 55    ol -> ol olli
Rule 56    ol -> olli
Rule 57    codeblock_fact -> codeblock_fact factor
Rule 58    codeblock_fact -> codeblock_fact CR factor
Rule 59    codeblock_fact -> CODEBLOCK CR factor
Rule 60    codeblock_fact -> CODEBLOCK factor
Rule 61    codeblock_fact -> codeblock_fact SYMBOL
Rule 62    factor -> TEXT

Terminals, with rules where they appear

CODE                 : 20 33
CODEBLOCK            : 23 59 60
CR                   : 4 5 6 7 8 9 10 11 47 48 54 58 59
EM                   : 19 28 30 30 31
H                    : 9
H1                   : 5
H2                   : 6
H3                   : 7
HR                   : 8
LANGLEBRAC           : 36
LBOXBRAC             : 39
LBRAC                : 42
OL                   : 52
RANGLEBRAC           : 21
RBOXBRAC             : 40
RBRAC                : 22
STRONG               : 18 25
SYMBOL               : 16 26 29 34 37 43 46 53 61
TEXT                 : 62
UL                   : 11 45
error                : 

Nonterminals, with rules where they appear

anglebrac_fact       : 21 35 37
body                 : 0
brac_fact            : 22 41 43
code_fact            : 20 32 34
codeblock_fact       : 23 57 58 61
em_fact              : 19 27 29 47
expression           : 2 3
factor               : 14 15 24 25 27 28 32 33 35 36 38 39 41 42 44 45 51 52 57 58 59 60
hr                   : 10 31
name                 : 22
name_fact            : 38 40
ol                   : 13 55
ol_fact              : 51 53 54
olli                 : 55 56
phrase               : 4 5 6 7 11 15 16 17 17
statement            : 1 3
strong_fact          : 18 24 26
ul                   : 12 49
ul_fact              : 44 46 48
ulli                 : 49 50

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . expression
    (3) statement -> . statement expression
    (4) expression -> . phrase CR
    (5) expression -> . H1 phrase CR
    (6) expression -> . H2 phrase CR
    (7) expression -> . H3 phrase CR
    (8) expression -> . HR CR
    (9) expression -> . H CR
    (10) expression -> . hr CR
    (11) expression -> . UL phrase CR
    (12) expression -> . ul
    (13) expression -> . ol
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (23) phrase -> . codeblock_fact CODEBLOCK
    (30) hr -> . EM EM
    (31) hr -> . hr EM
    (49) ul -> . ul ulli
    (50) ul -> . ulli
    (55) ol -> . ol olli
    (56) ol -> . olli
    (62) factor -> . TEXT
    (24) strong_fact -> . strong_fact factor
    (25) strong_fact -> . STRONG factor
    (26) strong_fact -> . strong_fact SYMBOL
    (27) em_fact -> . em_fact factor
    (28) em_fact -> . EM factor
    (29) em_fact -> . em_fact SYMBOL
    (32) code_fact -> . code_fact factor
    (33) code_fact -> . CODE factor
    (34) code_fact -> . code_fact SYMBOL
    (35) anglebrac_fact -> . anglebrac_fact factor
    (36) anglebrac_fact -> . LANGLEBRAC factor
    (37) anglebrac_fact -> . anglebrac_fact SYMBOL
    (40) name -> . name_fact RBOXBRAC
    (57) codeblock_fact -> . codeblock_fact factor
    (58) codeblock_fact -> . codeblock_fact CR factor
    (59) codeblock_fact -> . CODEBLOCK CR factor
    (60) codeblock_fact -> . CODEBLOCK factor
    (61) codeblock_fact -> . codeblock_fact SYMBOL
    (47) ulli -> . em_fact CR
    (48) ulli -> . ul_fact CR
    (54) olli -> . ol_fact CR
    (38) name_fact -> . name_fact factor
    (39) name_fact -> . LBOXBRAC factor
    (44) ul_fact -> . ul_fact factor
    (45) ul_fact -> . UL factor
    (46) ul_fact -> . ul_fact SYMBOL
    (51) ol_fact -> . ol_fact factor
    (52) ol_fact -> . OL factor
    (53) ol_fact -> . ol_fact SYMBOL

    H1              shift and go to state 28
    H2              shift and go to state 26
    H3              shift and go to state 27
    HR              shift and go to state 4
    H               shift and go to state 19
    UL              shift and go to state 29
    EM              shift and go to state 2
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    CODEBLOCK       shift and go to state 15
    LBOXBRAC        shift and go to state 33
    OL              shift and go to state 21

    body                           shift and go to state 16
    em_fact                        shift and go to state 1
    ol                             shift and go to state 24
    name                           shift and go to state 25
    ol_fact                        shift and go to state 17
    hr                             shift and go to state 18
    strong_fact                    shift and go to state 10
    olli                           shift and go to state 11
    name_fact                      shift and go to state 20
    ul                             shift and go to state 9
    ulli                           shift and go to state 30
    anglebrac_fact                 shift and go to state 31
    code_fact                      shift and go to state 22
    statement                      shift and go to state 13
    factor                         shift and go to state 14
    phrase                         shift and go to state 7
    ul_fact                        shift and go to state 6
    expression                     shift and go to state 32
    codeblock_fact                 shift and go to state 23

state 1

    (19) phrase -> em_fact . EM
    (27) em_fact -> em_fact . factor
    (29) em_fact -> em_fact . SYMBOL
    (47) ulli -> em_fact . CR
    (62) factor -> . TEXT

    EM              shift and go to state 34
    SYMBOL          shift and go to state 35
    CR              shift and go to state 37
    TEXT            shift and go to state 5

    factor                         shift and go to state 36

state 2

    (30) hr -> EM . EM
    (28) em_fact -> EM . factor
    (62) factor -> . TEXT

    EM              shift and go to state 38
    TEXT            shift and go to state 5

    factor                         shift and go to state 39

state 3

    (33) code_fact -> CODE . factor
    (62) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 40

state 4

    (8) expression -> HR . CR

    CR              shift and go to state 41


state 5

    (62) factor -> TEXT .

    CR              reduce using rule 62 (factor -> TEXT .)
    SYMBOL          reduce using rule 62 (factor -> TEXT .)
    TEXT            reduce using rule 62 (factor -> TEXT .)
    STRONG          reduce using rule 62 (factor -> TEXT .)
    EM              reduce using rule 62 (factor -> TEXT .)
    CODE            reduce using rule 62 (factor -> TEXT .)
    LANGLEBRAC      reduce using rule 62 (factor -> TEXT .)
    CODEBLOCK       reduce using rule 62 (factor -> TEXT .)
    LBOXBRAC        reduce using rule 62 (factor -> TEXT .)
    RBOXBRAC        reduce using rule 62 (factor -> TEXT .)
    RANGLEBRAC      reduce using rule 62 (factor -> TEXT .)
    RBRAC           reduce using rule 62 (factor -> TEXT .)


state 6

    (48) ulli -> ul_fact . CR
    (44) ul_fact -> ul_fact . factor
    (46) ul_fact -> ul_fact . SYMBOL
    (62) factor -> . TEXT

    CR              shift and go to state 42
    SYMBOL          shift and go to state 43
    TEXT            shift and go to state 5

    factor                         shift and go to state 44

state 7

    (4) expression -> phrase . CR
    (15) phrase -> phrase . factor
    (16) phrase -> phrase . SYMBOL
    (17) phrase -> phrase . phrase
    (62) factor -> . TEXT
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (23) phrase -> . codeblock_fact CODEBLOCK
    (24) strong_fact -> . strong_fact factor
    (25) strong_fact -> . STRONG factor
    (26) strong_fact -> . strong_fact SYMBOL
    (27) em_fact -> . em_fact factor
    (28) em_fact -> . EM factor
    (29) em_fact -> . em_fact SYMBOL
    (32) code_fact -> . code_fact factor
    (33) code_fact -> . CODE factor
    (34) code_fact -> . code_fact SYMBOL
    (35) anglebrac_fact -> . anglebrac_fact factor
    (36) anglebrac_fact -> . LANGLEBRAC factor
    (37) anglebrac_fact -> . anglebrac_fact SYMBOL
    (40) name -> . name_fact RBOXBRAC
    (57) codeblock_fact -> . codeblock_fact factor
    (58) codeblock_fact -> . codeblock_fact CR factor
    (59) codeblock_fact -> . CODEBLOCK CR factor
    (60) codeblock_fact -> . CODEBLOCK factor
    (61) codeblock_fact -> . codeblock_fact SYMBOL
    (38) name_fact -> . name_fact factor
    (39) name_fact -> . LBOXBRAC factor

    CR              shift and go to state 50
    SYMBOL          shift and go to state 46
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 49
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    CODEBLOCK       shift and go to state 15
    LBOXBRAC        shift and go to state 33

    em_fact                        shift and go to state 45
    name                           shift and go to state 25
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 20
    anglebrac_fact                 shift and go to state 31
    code_fact                      shift and go to state 22
    factor                         shift and go to state 48
    phrase                         shift and go to state 47
    codeblock_fact                 shift and go to state 23

state 8

    (25) strong_fact -> STRONG . factor
    (62) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 51

state 9

    (12) expression -> ul .
    (49) ul -> ul . ulli
    (47) ulli -> . em_fact CR
    (48) ulli -> . ul_fact CR
    (27) em_fact -> . em_fact factor
    (28) em_fact -> . EM factor
    (29) em_fact -> . em_fact SYMBOL
    (44) ul_fact -> . ul_fact factor
    (45) ul_fact -> . UL factor
    (46) ul_fact -> . ul_fact SYMBOL

  ! shift/reduce conflict for EM resolved as shift
  ! shift/reduce conflict for UL resolved as shift
    H1              reduce using rule 12 (expression -> ul .)
    H2              reduce using rule 12 (expression -> ul .)
    H3              reduce using rule 12 (expression -> ul .)
    HR              reduce using rule 12 (expression -> ul .)
    H               reduce using rule 12 (expression -> ul .)
    TEXT            reduce using rule 12 (expression -> ul .)
    STRONG          reduce using rule 12 (expression -> ul .)
    CODE            reduce using rule 12 (expression -> ul .)
    LANGLEBRAC      reduce using rule 12 (expression -> ul .)
    CODEBLOCK       reduce using rule 12 (expression -> ul .)
    LBOXBRAC        reduce using rule 12 (expression -> ul .)
    OL              reduce using rule 12 (expression -> ul .)
    $end            reduce using rule 12 (expression -> ul .)
    EM              shift and go to state 49
    UL              shift and go to state 53

  ! UL              [ reduce using rule 12 (expression -> ul .) ]
  ! EM              [ reduce using rule 12 (expression -> ul .) ]

    em_fact                        shift and go to state 52
    ulli                           shift and go to state 54
    ul_fact                        shift and go to state 6

state 10

    (18) phrase -> strong_fact . STRONG
    (24) strong_fact -> strong_fact . factor
    (26) strong_fact -> strong_fact . SYMBOL
    (62) factor -> . TEXT

    STRONG          shift and go to state 56
    SYMBOL          shift and go to state 55
    TEXT            shift and go to state 5

    factor                         shift and go to state 57

state 11

    (56) ol -> olli .

    OL              reduce using rule 56 (ol -> olli .)
    H1              reduce using rule 56 (ol -> olli .)
    H2              reduce using rule 56 (ol -> olli .)
    H3              reduce using rule 56 (ol -> olli .)
    HR              reduce using rule 56 (ol -> olli .)
    H               reduce using rule 56 (ol -> olli .)
    UL              reduce using rule 56 (ol -> olli .)
    EM              reduce using rule 56 (ol -> olli .)
    TEXT            reduce using rule 56 (ol -> olli .)
    STRONG          reduce using rule 56 (ol -> olli .)
    CODE            reduce using rule 56 (ol -> olli .)
    LANGLEBRAC      reduce using rule 56 (ol -> olli .)
    CODEBLOCK       reduce using rule 56 (ol -> olli .)
    LBOXBRAC        reduce using rule 56 (ol -> olli .)
    $end            reduce using rule 56 (ol -> olli .)


state 12

    (36) anglebrac_fact -> LANGLEBRAC . factor
    (62) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 58

state 13

    (1) body -> statement .
    (3) statement -> statement . expression
    (4) expression -> . phrase CR
    (5) expression -> . H1 phrase CR
    (6) expression -> . H2 phrase CR
    (7) expression -> . H3 phrase CR
    (8) expression -> . HR CR
    (9) expression -> . H CR
    (10) expression -> . hr CR
    (11) expression -> . UL phrase CR
    (12) expression -> . ul
    (13) expression -> . ol
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (23) phrase -> . codeblock_fact CODEBLOCK
    (30) hr -> . EM EM
    (31) hr -> . hr EM
    (49) ul -> . ul ulli
    (50) ul -> . ulli
    (55) ol -> . ol olli
    (56) ol -> . olli
    (62) factor -> . TEXT
    (24) strong_fact -> . strong_fact factor
    (25) strong_fact -> . STRONG factor
    (26) strong_fact -> . strong_fact SYMBOL
    (27) em_fact -> . em_fact factor
    (28) em_fact -> . EM factor
    (29) em_fact -> . em_fact SYMBOL
    (32) code_fact -> . code_fact factor
    (33) code_fact -> . CODE factor
    (34) code_fact -> . code_fact SYMBOL
    (35) anglebrac_fact -> . anglebrac_fact factor
    (36) anglebrac_fact -> . LANGLEBRAC factor
    (37) anglebrac_fact -> . anglebrac_fact SYMBOL
    (40) name -> . name_fact RBOXBRAC
    (57) codeblock_fact -> . codeblock_fact factor
    (58) codeblock_fact -> . codeblock_fact CR factor
    (59) codeblock_fact -> . CODEBLOCK CR factor
    (60) codeblock_fact -> . CODEBLOCK factor
    (61) codeblock_fact -> . codeblock_fact SYMBOL
    (47) ulli -> . em_fact CR
    (48) ulli -> . ul_fact CR
    (54) olli -> . ol_fact CR
    (38) name_fact -> . name_fact factor
    (39) name_fact -> . LBOXBRAC factor
    (44) ul_fact -> . ul_fact factor
    (45) ul_fact -> . UL factor
    (46) ul_fact -> . ul_fact SYMBOL
    (51) ol_fact -> . ol_fact factor
    (52) ol_fact -> . OL factor
    (53) ol_fact -> . ol_fact SYMBOL

    $end            reduce using rule 1 (body -> statement .)
    H1              shift and go to state 28
    H2              shift and go to state 26
    H3              shift and go to state 27
    HR              shift and go to state 4
    H               shift and go to state 19
    UL              shift and go to state 29
    EM              shift and go to state 2
    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    CODEBLOCK       shift and go to state 15
    LBOXBRAC        shift and go to state 33
    OL              shift and go to state 21

    em_fact                        shift and go to state 1
    olli                           shift and go to state 11
    ol                             shift and go to state 24
    name                           shift and go to state 25
    ol_fact                        shift and go to state 17
    hr                             shift and go to state 18
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 20
    ul                             shift and go to state 9
    ulli                           shift and go to state 30
    anglebrac_fact                 shift and go to state 31
    code_fact                      shift and go to state 22
    factor                         shift and go to state 14
    phrase                         shift and go to state 7
    ul_fact                        shift and go to state 6
    expression                     shift and go to state 59
    codeblock_fact                 shift and go to state 23

state 14

    (14) phrase -> factor .

    CR              reduce using rule 14 (phrase -> factor .)
    SYMBOL          reduce using rule 14 (phrase -> factor .)
    TEXT            reduce using rule 14 (phrase -> factor .)
    STRONG          reduce using rule 14 (phrase -> factor .)
    EM              reduce using rule 14 (phrase -> factor .)
    CODE            reduce using rule 14 (phrase -> factor .)
    LANGLEBRAC      reduce using rule 14 (phrase -> factor .)
    CODEBLOCK       reduce using rule 14 (phrase -> factor .)
    LBOXBRAC        reduce using rule 14 (phrase -> factor .)


state 15

    (59) codeblock_fact -> CODEBLOCK . CR factor
    (60) codeblock_fact -> CODEBLOCK . factor
    (62) factor -> . TEXT

    CR              shift and go to state 60
    TEXT            shift and go to state 5

    factor                         shift and go to state 61

state 16

    (0) S' -> body .



state 17

    (54) olli -> ol_fact . CR
    (51) ol_fact -> ol_fact . factor
    (53) ol_fact -> ol_fact . SYMBOL
    (62) factor -> . TEXT

    CR              shift and go to state 64
    SYMBOL          shift and go to state 62
    TEXT            shift and go to state 5

    factor                         shift and go to state 63

state 18

    (10) expression -> hr . CR
    (31) hr -> hr . EM

    CR              shift and go to state 65
    EM              shift and go to state 66


state 19

    (9) expression -> H . CR

    CR              shift and go to state 67


state 20

    (40) name -> name_fact . RBOXBRAC
    (38) name_fact -> name_fact . factor
    (62) factor -> . TEXT

    RBOXBRAC        shift and go to state 69
    TEXT            shift and go to state 5

    factor                         shift and go to state 68

state 21

    (52) ol_fact -> OL . factor
    (62) factor -> . TEXT

    TEXT            shift and go to state 5

    factor                         shift and go to state 70

state 22

    (20) phrase -> code_fact . CODE
    (32) code_fact -> code_fact . factor
    (34) code_fact -> code_fact . SYMBOL
    (62) factor -> . TEXT

    CODE            shift and go to state 72
    SYMBOL          shift and go to state 71
    TEXT            shift and go to state 5

    factor                         shift and go to state 73

state 23

    (23) phrase -> codeblock_fact . CODEBLOCK
    (57) codeblock_fact -> codeblock_fact . factor
    (58) codeblock_fact -> codeblock_fact . CR factor
    (61) codeblock_fact -> codeblock_fact . SYMBOL
    (62) factor -> . TEXT

    CODEBLOCK       shift and go to state 77
    CR              shift and go to state 76
    SYMBOL          shift and go to state 74
    TEXT            shift and go to state 5

    factor                         shift and go to state 75

state 24

    (13) expression -> ol .
    (55) ol -> ol . olli
    (54) olli -> . ol_fact CR
    (51) ol_fact -> . ol_fact factor
    (52) ol_fact -> . OL factor
    (53) ol_fact -> . ol_fact SYMBOL

  ! shift/reduce conflict for OL resolved as shift
    H1              reduce using rule 13 (expression -> ol .)
    H2              reduce using rule 13 (expression -> ol .)
    H3              reduce using rule 13 (expression -> ol .)
    HR              reduce using rule 13 (expression -> ol .)
    H               reduce using rule 13 (expression -> ol .)
    UL              reduce using rule 13 (expression -> ol .)
    EM              reduce using rule 13 (expression -> ol .)
    TEXT            reduce using rule 13 (expression -> ol .)
    STRONG          reduce using rule 13 (expression -> ol .)
    CODE            reduce using rule 13 (expression -> ol .)
    LANGLEBRAC      reduce using rule 13 (expression -> ol .)
    CODEBLOCK       reduce using rule 13 (expression -> ol .)
    LBOXBRAC        reduce using rule 13 (expression -> ol .)
    $end            reduce using rule 13 (expression -> ol .)
    OL              shift and go to state 21

  ! OL              [ reduce using rule 13 (expression -> ol .) ]

    olli                           shift and go to state 78
    ol_fact                        shift and go to state 17

state 25

    (22) phrase -> name . brac_fact RBRAC
    (41) brac_fact -> . brac_fact factor
    (42) brac_fact -> . LBRAC factor
    (43) brac_fact -> . brac_fact SYMBOL

    LBRAC           shift and go to state 79

    brac_fact                      shift and go to state 80

state 26

    (6) expression -> H2 . phrase CR
    (14) phrase -> . factor
    (15) phrase -> . phrase factor
    (16) phrase -> . phrase SYMBOL
    (17) phrase -> . phrase phrase
    (18) phrase -> . strong_fact STRONG
    (19) phrase -> . em_fact EM
    (20) phrase -> . code_fact CODE
    (21) phrase -> . anglebrac_fact RANGLEBRAC
    (22) phrase -> . name brac_fact RBRAC
    (23) phrase -> . codeblock_fact CODEBLOCK
    (62) factor -> . TEXT
    (24) strong_fact -> . strong_fact factor
    (25) strong_fact -> . STRONG factor
    (26) strong_fact -> . strong_fact SYMBOL
    (27) em_fact -> . em_fact factor
    (28) em_fact -> . EM factor
    (29) em_fact -> . em_fact SYMBOL
    (32) code_fact -> . code_fact factor
    (33) code_fact -> . CODE factor
    (34) code_fact -> . code_fact SYMBOL
    (35) anglebrac_fact -> . anglebrac_fact factor
    (36) anglebrac_fact -> . LANGLEBRAC factor
    (37) anglebrac_fact -> . anglebrac_fact SYMBOL
    (40) name -> . name_fact RBOXBRAC
    (57) codeblock_fact -> . codeblock_fact factor
    (58) codeblock_fact -> . codeblock_fact CR factor
    (59) codeblock_fact -> . CODEBLOCK CR factor
    (60) codeblock_fact -> . CODEBLOCK factor
    (61) codeblock_fact -> . codeblock_fact SYMBOL
    (38) name_fact -> . name_fact factor
    (39) name_fact -> . LBOXBRAC factor

    TEXT            shift and go to state 5
    STRONG          shift and go to state 8
    EM              shift and go to state 49
    CODE            shift and go to state 3
    LANGLEBRAC      shift and go to state 12
    CODEBLOCK       shift and go to state 15
    LBOXBRAC        shift and go to state 33

    em_fact                        shift and go to state 45
    name                           shift and go to state 25
    strong_fact                    shift and go to state 10
    name_fact                      shift and go to state 20
    anglebrac_fact                 shift and go to state 31
    code_fact                      shift and go to state 22
    factor                         shift and go to state 14
    phrase                         shift and go to state 81
    codeblock_fact                 shift and go to state 23

state 27
